--- a/nids/templates/nids/index.html
+++ b/nids/templates/nids/index.html
@@ -49,7 +49,7 @@
                     <dl class="layui-nav-child">
                         <dd class="">
                         <dd class="">
-                            <a href="javascript:;" _href="{% url 'nids:panel_latest_warning' %}">
+                            <a href="javascript:;" _href="{% url 'nids:panel_latest_warning' 1 %}">
                                 <cite>最新告警</cite>
                             </a>
                         </dd>
