完成协议分类功能

--- a/nids/templates/nids/index.html
+++ b/nids/templates/nids/index.html
@@ -80,28 +80,28 @@
                     <dl class="layui-nav-child">
                         <dd class="">
                         <dd class="">
-                            <a href="javascript:;" _href="{% url 'nids:panel_tcp_warning' %}">
+                            <a href="javascript:;" _href="{% url 'nids:panel_tcp_warning' 1 %}">
                                 <cite>TCP告警</cite>
                             </a>
                         </dd>
                         </dd>
                         <dd class="">
                         <dd class="">
-                            <a href="javascript:;" _href="{% url 'nids:panel_udp_warning' %}">
+                            <a href="javascript:;" _href="{% url 'nids:panel_udp_warning' 1 %}">
                                 <cite>UDP告警</cite>
                             </a>
                         </dd>
                         </dd>
                         <dd class="">
                         <dd class="">
-                            <a href="javascript:;" _href="{% url 'nids:panel_icmp_warning' %}">
+                            <a href="javascript:;" _href="{% url 'nids:panel_icmp_warning' 1 %}">
                                 <cite>ICMP告警</cite>
                             </a>
                         </dd>
                         </dd>
                         <dd class="">
                         <dd class="">
-                            <a href="javascript:;" _href="{% url 'nids:panel_port_scan_warning' %}">
+                            <a href="javascript:;" _href="{% url 'nids:panel_port_scan_warning' 1 %}">
                                 <cite>端口扫描</cite>
                             </a>
                         </dd>
@@ -148,42 +148,42 @@
                     </a>
                     <dl class="layui-nav-child">
                         <dd class="">
-                            <a href="javascript:;" _href="{% url 'nids:panel_icmp_warning' %}">
+                            <a href="javascript:;" _href="{% url 'nids:panel_icmp_warning' 1 %}">
                                 <cite>拆线图</cite>
                             </a>
                         </dd>
                         <dd class="">
-                            <a href="javascript:;" _href="{% url 'nids:panel_icmp_warning' %}">
+                            <a href="javascript:;" _href="{% url 'nids:panel_icmp_warning' 1 %}">
                                 <cite>柱状图</cite>
                             </a>
                         </dd>
                         <dd class="">
-                            <a href="javascript:;" _href="{% url 'nids:panel_icmp_warning' %}">
+                            <a href="javascript:;" _href="{% url 'nids:panel_icmp_warning' 1 %}">
                                 <cite>地图</cite>
                             </a>
                         </dd>
                         <dd class="">
-                            <a href="javascript:;" _href="{% url 'nids:panel_icmp_warning' %}">
+                            <a href="javascript:;" _href="{% url 'nids:panel_icmp_warning' 1 %}">
                                 <cite>饼图</cite>
                             </a>
                         </dd>
                         <dd class="">
-                            <a href="javascript:;" _href="{% url 'nids:panel_icmp_warning' %}">
+                            <a href="javascript:;" _href="{% url 'nids:panel_icmp_warning' 1 %}">
                                 <cite>雷达图</cite>
                             </a>
                         </dd>
                         <dd class="">
-                            <a href="javascript:;" _href="{% url 'nids:panel_icmp_warning' %}">
+                            <a href="javascript:;" _href="{% url 'nids:panel_icmp_warning' 1 %}">
                                 <cite>k线图</cite>
                             </a>
                         </dd>
                         <dd class="">
-                            <a href="javascript:;" _href="{% url 'nids:panel_icmp_warning' %}">
+                            <a href="javascript:;" _href="{% url 'nids:panel_icmp_warning' 1 %}">
                                 <cite>热力图</cite>
                             </a>
                         </dd>
                         <dd class="">
-                            <a href="javascript:;" _href="{% url 'nids:panel_icmp_warning' %}">
+                            <a href="javascript:;" _href="{% url 'nids:panel_icmp_warning' 1 %}">
                                 <cite>仪表图</cite>
                             </a>
                         </dd>
