完成IP分类告警功能
未完成单个ip列表展示

--- a/nids/templates/nids/index.html
+++ b/nids/templates/nids/index.html
@@ -114,12 +114,12 @@
                     </a>
                     <dl class="layui-nav-child">
                         <dd class="">
-                            <a href="javascript:;" _href="{% url 'nids:panel_srcip_warning' %}">
+                            <a href="javascript:;" _href="{% url 'nids:panel_srcip_warning' 1 %}">
                                 <cite>来源IP</cite>
                             </a>
                         </dd>
                         <dd class="">
-                            <a href="javascript:;" _href="{% url 'nids:panel_dstip_warning' %}">
+                            <a href="javascript:;" _href="{% url 'nids:panel_dstip_warning' 1 %}">
                                 <cite>目的IP</cite>
                             </a>
                         </dd>
