--- a/nids/templates/nids/panel_dstip_warning.html
+++ b/nids/templates/nids/panel_dstip_warning.html
@@ -18,8 +18,8 @@
 <div class="x-nav">
             <span class="layui-breadcrumb">
               <a><cite>Naive NIDS</cite></a>
-              <a><cite>用户管理</cite></a>
-              <a><cite>用户列表</cite></a>
+              <a><cite>IP分类</cite></a>
+              <a><cite>来源IP</cite></a>
             </span>
     <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right"  href="javascript:location.replace(location.href);" title="刷新"><i class="layui-icon" style="line-height:30px">ဂ</i></a>
 </div>
@@ -32,19 +32,16 @@
                 <!--                <input type="checkbox" name="" value="">-->序号
             </th>
             <th>
-                特征
+                目的ip
             </th>
             <th>
-                时间戳
+                最新时间戳
             </th>
             <th>
-                来源地址
+                最新攻击事件
             </th>
             <th>
-                目标地址
-            </th>
-            <th>
-                第四层协议
+                操作
             </th>
 <!--            <th>-->
 <!--                操作-->
@@ -58,30 +55,17 @@
                 <!--                <input type="checkbox" value="1" name="">-->{{ forloop.counter|add:index }}
             </td>
             <td>
-                <a href="javascript:location.replace('{% url 'nids:panel_event_detail' warning.eid %}');" title="查看{{ warning.sig_name }}的详细信息">{{ warning.sig_name }}</a>
+                {{ warning.dip }}
             </td>
             <td>
                 {{ warning.timestamp|date:'Y-m-d H:i:s' }}
             </td>
-            <td >
-                {{ warning.sip }}:{{ warning.port_src }}
-            </td>
-            <td >
-                {{ warning.dip }}:{{ warning.port_dst }}
-            </td>
             <td>
-                <!--                    ip_proto: ip数据包的上层协议ICMP(1)、TCP(6)、UDP(17)-->
-                {% if warning.ip_proto == 1 %}
-                <span class="layui-btn layui-btn-normal layui-btn-mini">ICMP</span>
-                {% elif warning.ip_proto == 6 %}
-                <span class="layui-btn layui-btn-danger layui-btn-mini">TCP</span>
-                {% elif warning.ip_proto == 17 %}
-                <span class="layui-btn layui-btn-warm layui-btn-mini">UDP</span>
-                {% endif %}
+                {{ warning.sig_name }}
             </td>
-<!--            <td class="td-manage">-->
-
-<!--            </td>-->
+            <td class="td-manage">
+                <a href="javascript:location.replace('{% url 'nids:panel_ip_dst_list' warning.ip_dst %}');" title="查看{{ warning.dip }}的详细信息">show list</a>
+            </td>
         </tr>
         {% endfor %}
         </tbody>
@@ -89,8 +73,8 @@
     <!--        <div id="page"><div class="layui-box layui-laypage layui-laypage-default" id="layui-laypage-0"><span class="layui-laypage-curr"><em class="layui-laypage-em"></em><em>1</em></span><a href="javascript:;" data-page="2">2</a><a href="javascript:;" data-page="3">3</a><a href="javascript:;" data-page="4">4</a><a href="javascript:;" data-page="5">5</a><span>…</span><a href="javascript:;" class="layui-laypage-last" title="尾页" data-page="100">100</a><a href="javascript:;" class="layui-laypage-next" data-page="2"><em>&gt;</em></a></div></div>-->
     <div id="page"></div>
 </div>
-<script src="{% static 'nids/lib/layui/layui.js' %}" charset="utf-8"></script>
-<script src="{% static 'nids/js/x-layui.js' %}" charset="utf-8"></script>
+<script dst="{% static 'nids/lib/layui/layui.js' %}" charset="utf-8"></script>
+<script dst="{% static 'nids/js/x-layui.js' %}" charset="utf-8"></script>
 <script>
             //layui.use(['laydate','element','laypage','layer'], function(){
             layui.use(['laypage','layer'], function(){
