--- a/nids/templates/nids/index.html
+++ b/nids/templates/nids/index.html
@@ -131,12 +131,12 @@
                     </a>
                     <dl class="layui-nav-child">
                         <dd class="">
-                            <a href="javascript:;" _href="{% url 'nids:panel_srcport_warning' %}">
+                            <a href="javascript:;" _href="{% url 'nids:panel_srcport_warning' 1 %}">
                                 <cite>来源端口</cite>
                             </a>
                         </dd>
                         <dd class="">
-                            <a href="javascript:;" _href="{% url 'nids:panel_dstport_warning' %}">
+                            <a href="javascript:;" _href="{% url 'nids:panel_dstport_warning' 1 %}">
                                 <cite>目的端口</cite>
                             </a>
                         </dd>
