--- a/nids/templates/nids/panel_srcport_warning.html
+++ b/nids/templates/nids/panel_srcport_warning.html
@@ -18,8 +18,8 @@
 <div class="x-nav">
             <span class="layui-breadcrumb">
               <a><cite>Naive NIDS</cite></a>
-              <a><cite>用户管理</cite></a>
-              <a><cite>用户列表</cite></a>
+              <a><cite>端口分类</cite></a>
+              <a><cite>来源端口</cite></a>
             </span>
     <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right"  href="javascript:location.replace(location.href);" title="刷新"><i class="layui-icon" style="line-height:30px">ဂ</i></a>
 </div>
@@ -32,19 +32,16 @@
                 <!--                <input type="checkbox" name="" value="">-->序号
             </th>
             <th>
-                特征
+                源端口
             </th>
             <th>
-                时间戳
+                最新时间戳
             </th>
             <th>
-                来源地址
+                最新攻击事件
             </th>
             <th>
-                目标地址
-            </th>
-            <th>
-                第四层协议
+                操作
             </th>
 <!--            <th>-->
 <!--                操作-->
@@ -58,26 +55,16 @@
                 <!--                <input type="checkbox" value="1" name="">-->{{ forloop.counter|add:index }}
             </td>
             <td>
-                <a href="javascript:location.replace('{% url 'nids:panel_event_detail' warning.eid %}');" title="查看{{ warning.sig_name }}的详细信息">{{ warning.sig_name }}</a>
+                {{ warning.port_src }}
             </td>
             <td>
                 {{ warning.timestamp|date:'Y-m-d H:i:s' }}
             </td>
-            <td >
-                {{ warning.sip }}:{{ warning.port_src }}
+            <td>
+                {{ warning.sig_name }}
             </td>
-            <td >
-                {{ warning.dip }}:{{ warning.port_dst }}
-            </td>
-            <td class="td-status">
-                <!--                    ip_proto: ip数据包的上层协议ICMP(1)、TCP(6)、UDP(17)-->
-                {% if warning.ip_proto == 1 %}
-                <span class="layui-btn layui-btn-normal layui-btn-mini">ICMP</span>
-                {% elif warning.ip_proto == 6 %}
-                <span class="layui-btn layui-btn-danger layui-btn-mini">TCP</span>
-                {% elif warning.ip_proto == 17 %}
-                <span class="layui-btn layui-btn-warm layui-btn-mini">UDP</span>
-                {% endif %}
+            <td class="td-manage">
+                <a href="javascript:location.replace('{% url 'nids:panel_srcport_list' warning.port_src 1 %}');" title="查看{{ warning.port_src }}的详细信息">show list</a>
             </td>
         </tr>
         {% endfor %}
@@ -107,7 +94,7 @@
                 ,jump: function(obj, first){
                     var num = obj.curr
                     if({{ warnings.number }} != num){
-                        window.location.href='/nids/panel_port_scan_warning/' + num + '/'
+                        window.location.href='/nids/panel_srcport_warning/' + num + '/'
                     }
                   }
               });
