--- a/nids/templates/nids/panel_port_scan_warning.html
+++ b/nids/templates/nids/panel_port_scan_warning.html
@@ -32,7 +32,7 @@
                 <!--                <input type="checkbox" name="" value="">-->序号
             </th>
             <th>
-                特征
+                攻击事件
             </th>
             <th>
                 时间戳
